# gql-schema-parser

./: CHANGELOG.md  README.md  gql-haskell-parser.cabal
app/: Main.hs  Parser.hs  SExp.hs  TokenParser.hs  TypescriptGenerator.hs  generated.ts
app/token-parsers/: BaseParser.hs  BooleanParser.hs  EnumParser.hs  FloatParser.hs  IntegerParser.hs  NameParser.hs  NullParser.hs  StringParser.hs  VariableParser.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
