cabal-version:      2.4
name:               gql-haskell-parser
version:            0.1.0.0
maintainer:         vajdatomi98@gmail.com
author:             WTomas
extra-source-files: CHANGELOG.md

library
    main-is:          Main.hs
    hs-source-dirs:   app, app/token-parsers
    default-language: Haskell2010
    build-depends:    base ^>=4.14.3.0, 
                      megaparsec ^>=9.2, 
                      unicode-data
    exposed-modules:
        Main
        Parser
        TypescriptGenerator

                      
